feat: Añadir esqueleto del módulo de Activos Fijos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <a id="nav-plan-de-cuentas" class="conta-nav-link" onclick="ContaApp.irModulo('plan-de-cuentas')"><i class="fa-solid fa-book fa-fw me-2"></i> Plan de Cuentas</a>
                 <a id="nav-diario-general" class="conta-nav-link" onclick="ContaApp.irModulo('diario-general')"><i class="fa-solid fa-book-journal-whills fa-fw me-2"></i> Diario General</a>
                 <a id="nav-cierre-periodo" class="conta-nav-link" onclick="ContaApp.irModulo('cierre-periodo')"><i class="fa-solid fa-scale-balanced fa-fw me-2"></i> Cierre del Período</a>
+                <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Activos</div>
+                <a id="nav-activos-fijos" class="conta-nav-link" onclick="ContaApp.irModulo('activos-fijos')"><i class="fa-solid fa-building-columns fa-fw me-2"></i> Activos Fijos</a>
                 
                 <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Análisis</div>
                 <a id="nav-reportes" class="conta-nav-link" onclick="ContaApp.irModulo('reportes')"><i class="fa-solid fa-chart-simple fa-fw me-2"></i> Reportes Financieros</a>
@@ -90,6 +92,7 @@
                 <div id="cierre-periodo" style="display:none;"></div>
                 <div id="bancos" style="display:none;"></div>
                 <div id="reportes" style="display:none;"></div>
+                <div id="activos-fijos" style="display:none;"></div>
                 <div id="config" style="display:none;"></div>
             </div>
         </main>
@@ -134,6 +137,7 @@
     <script src="modules/inventario.js"></script>
     <script src="modules/bancos.js"></script>
     <script src="modules/reportes.js"></script>
+     <script src="modules/activos_fijos.js"></script>
     <script src="modules/contabilidad.js"></script>
     <script src="modules/config.js"></script>
     
