feat: Añadir esqueleto del módulo de Activos Fijos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
                 <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Inventario</div>
                 <a id="nav-inventario" class="conta-nav-link" onclick="ContaApp.irModulo('inventario')"><i class="fa-solid fa-boxes-stacked fa-fw me-2"></i> Gestión de Productos</a>
-                
+                <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Producción</div>
+                <a id="nav-produccion" class="conta-nav-link" onclick="ContaApp.irModulo('produccion')"><i class="fa-solid fa-cogs fa-fw me-2"></i> Gestión de Producción</a>
                 <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Contabilidad</div>
                 <a id="nav-plan-de-cuentas" class="conta-nav-link" onclick="ContaApp.irModulo('plan-de-cuentas')"><i class="fa-solid fa-book fa-fw me-2"></i> Plan de Cuentas</a>
                 <a id="nav-diario-general" class="conta-nav-link" onclick="ContaApp.irModulo('diario-general')"><i class="fa-solid fa-book-journal-whills fa-fw me-2"></i> Diario General</a>
@@ -93,6 +94,7 @@
                 <div id="bancos" style="display:none;"></div>
                 <div id="reportes" style="display:none;"></div>
                 <div id="activos-fijos" style="display:none;"></div>
+                <div id="produccion" style="display:none;"></div>
                 <div id="config" style="display:none;"></div>
             </div>
         </main>
@@ -138,6 +140,7 @@
     <script src="modules/bancos.js"></script>
     <script src="modules/reportes.js"></script>
      <script src="modules/activos_fijos.js"></script>
+     <script src="modules/produccion.js"></script>
     <script src="modules/contabilidad.js"></script>
     <script src="modules/config.js"></script>
     
