--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="px-4 pt-4 pb-2 text-xs font-bold uppercase text-[var(--color-text-secondary)]">Finanzas</div>
                 <a id="nav-ventas" class="conta-nav-link" onclick="ContaApp.irModulo('ventas')"><i class="fa-solid fa-shopping-cart fa-fw me-2"></i> Ventas</a>
                 <a id="nav-cxc" class="conta-nav-link" onclick="ContaApp.irModulo('cxc')"><i class="fa-solid fa-file-invoice-dollar fa-fw me-2"></i> Cuentas por Cobrar</a>
-                <a id="nav-gastos" class="conta-nav-link" onclick="ContaApp.irModulo('gastos')"><i class="fa-solid fa-receipt fa-fw me-2"></i> Gastos y Compras</a>
+                <a id="nav-gastos" class="conta-nav-link" onclick="ContaApp.irModulo('gastos')"><i class="fa-solid fa-receipt fa-fw me-2"></i> Gastos</a>
                 <a id="nav-cxp" class="conta-nav-link" onclick="ContaApp.irModulo('cxp')"><i class="fa-solid fa-file-invoice fa-fw me-2"></i> Cuentas por Pagar</a>
                 <a id="nav-bancos" class="conta-nav-link" onclick="ContaApp.irModulo('bancos')"><i class="fa-solid fa-landmark fa-fw me-2"></i> Bancos y Tarjetas</a>
 
