--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <a id="nav-ventas" class="conta-nav-link" onclick="ContaApp.irModulo('ventas')"><i class="fa-solid fa-shopping-cart fa-fw me-2"></i> Ventas</a>
                 <a id="nav-cxc" class="conta-nav-link" onclick="ContaApp.irModulo('cxc')"><i class="fa-solid fa-file-invoice-dollar fa-fw me-2"></i> Cuentas por Cobrar</a>
                 <a id="nav-gastos" class="conta-nav-link" onclick="ContaApp.irModulo('gastos')"><i class="fa-solid fa-receipt fa-fw me-2"></i> Gastos</a>
+                <a id="nav-compras" class="conta-nav-link" onclick="ContaApp.irModulo('compras')"><i class="fa-solid fa-shopping-basket fa-fw me-2"></i> Compras</a>
                 <a id="nav-cxp" class="conta-nav-link" onclick="ContaApp.irModulo('cxp')"><i class="fa-solid fa-file-invoice fa-fw me-2"></i> Cuentas por Pagar</a>
                 <a id="nav-bancos" class="conta-nav-link" onclick="ContaApp.irModulo('bancos')"><i class="fa-solid fa-landmark fa-fw me-2"></i> Bancos y Tarjetas</a>
 
@@ -86,6 +87,7 @@
                 <div id="anticipos" style="display:none;"></div>
                 <div id="cxc" style="display:none;"></div>
                 <div id="gastos" style="display:none;"></div>
+                <div id="compras" style="display:none;"></div>
                 <div id="cxp" style="display:none;"></div>
                 <div id="inventario" style="display:none;"></div>
                 <div id="plan-de-cuentas" style="display:none;"></div>
@@ -135,6 +137,7 @@
     <script src="modules/dashboard.js"></script>
     <script src="modules/ventas.js"></script>
     <script src="modules/gastos.js"></script>
+    <script src="modules/compras.js"></script>
     <script src="modules/cuentas_corrientes.js"></script>
     <script src="modules/inventario.js"></script>
     <script src="modules/bancos.js"></script>
