feat: Añadir esqueleto del módulo de Activos Fijos

--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es" data-theme="fresco">
 <head>
     <meta charset="UTF-8">
@@ -46,14 +47,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     
     <script>
-      // Tu configuración personal de Firebase
+      // Tu nueva configuración personal de Firebase
       const firebaseConfig = {
-        apiKey: "AIzaSyAmbRyLI3Z05KQCR5rnVYl1hneo6FgA15s",
-        authDomain: "contaapp-pro.firebaseapp.com",
-        projectId: "contaapp-pro",
-        storageBucket: "contaapp-pro.firebasestorage.app",
-        messagingSenderId: "275496192649",
-        appId: "1:275496192649:web:1d6563eedf21849e049458"
+        apiKey: "AIzaSyC3aa2x_1B-NwXrwm07ook5lY5saJ6_9ew",
+        authDomain: "contapp-pro-23d00.firebaseapp.com",
+        projectId: "contapp-pro-23d00",
+        storageBucket: "contapp-pro-23d00.appspot.com",
+        messagingSenderId: "115018410304",
+        appId: "1:115018410304:web:e3fd1511e1edfdf898f2a5"
       };
     
       // Inicializar Firebase
