--- a/login.html
+++ b/login.html
@@ -47,12 +47,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     
     <script>
-      // Tu nueva configuración personal de Firebase
+      // Tu configuración personal de Firebase
       const firebaseConfig = {
-        apiKey: "AIzaSyC3aa2x_1B-NwXrwm07ook5lY5saJ6_9ew",
+        apiKey: "AIzaSyC3aa2x_lB-NwXrwm07ook5lY5saJ6_9ew",
         authDomain: "contapp-pro-23d00.firebaseapp.com",
         projectId: "contapp-pro-23d00",
-        storageBucket: "contapp-pro-23d00.appspot.com",
+        storageBucket: "contapp-pro-23d00.firebasestorage.app",
         messagingSenderId: "115018410304",
         appId: "1:115018410304:web:e3fd1511e1edfdf898f2a5"
       };
