feat: Añadir esqueleto del módulo de Activos Fijos

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <div id="bancos" style="display:none;"></div>
                 <div id="reportes" style="display:none;"></div>
                 <div id="config" style="display:none;"></div>
+                <div id="pagination-container" class="no-print"></div>
             </div>
         </main>
     </div>
