--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a id="nav-config" class="conta-nav-link" onclick="ContaApp.irModulo('config')"><i class="fa-solid fa-cog fa-fw me-2"></i> Ajustes</a>
             </div>
         </nav>
-                <main class="flex-1 flex flex-col relative">
+        <main class="flex-1 flex flex-col relative">
             <div id="content-header" class="bg-[var(--color-bg-secondary)] shadow-sm p-4 flex justify-between items-center gap-4 no-print">
                 <div class="flex items-center gap-4">
                     <button id="back-button" class="conta-btn-icon" onclick="ContaApp.irAtras()" title="Ir Atrás" disabled>
@@ -77,6 +77,19 @@
                     <input type="text" id="global-search-input" placeholder="Buscar factura, cliente, gasto..." class="w-full conta-input pl-10">
                     <div id="global-search-results" class="hidden absolute top-full mt-2 w-full bg-[var(--color-bg-secondary)] rounded-lg shadow-xl border border-[var(--color-border-primary)] z-50 max-h-96 overflow-y-auto"></div>
                 </div>
+
+                <!-- ===== INICIO DE CÓDIGO AÑADIDO PARA NOTIFICACIONES ===== -->
+                <div id="notification-bell-container" class="relative flex-shrink-0">
+                    <button class="conta-btn-icon" onclick="ContaApp.toggleNotificationDropdown()" title="Notificaciones">
+                        <i class="fa-solid fa-bell fa-lg"></i>
+                        <span id="notification-badge" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold rounded-full h-4 w-4 flex items-center justify-center hidden"></span>
+                    </button>
+                    <div id="notification-dropdown" class="hidden absolute top-full mt-2 right-0 w-80 bg-[var(--color-bg-secondary)] rounded-lg shadow-xl border border-[var(--color-border-primary)] z-50 max-h-96 overflow-y-auto">
+                        <!-- El contenido de las notificaciones se generará aquí -->
+                    </div>
+                </div>
+                <!-- ===== FIN DE CÓDIGO AÑADIDO ===== -->
+                
                 <div id="page-actions-header" class="flex-shrink-0"></div>
             </div>
             <div id="module-loader" class="absolute top-0 left-0 right-0 bottom-0 bg-[rgba(var(--color-bg-primary-rgb),0.7)] z-40 flex items-center justify-center hidden">
@@ -100,9 +113,7 @@
                 <div id="reportes" style="display:none;"></div>
                 <div id="config" style="display:none;"></div>
             </div>
-            <!-- INICIO DE LA CORRECCIÓN: El contenedor ahora es hermano de #content-area -->
             <div id="pagination-container" class="no-print"></div>
-            <!-- FIN DE LA CORRECCIÓN -->
         </main>
     </div>
     <div id="modal-bg" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4 overflow-y-auto no-print" onclick="ContaApp.closeModal()">
