feat: Añadir esqueleto del módulo de Activos Fijos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                     </div>
                 </div>
                 <!-- ===== FIN DE CÓDIGO AÑADIDO ===== -->
-                
+                <button class="conta-btn-icon" onclick="ContaApp.cerrarSesion()" title="Cerrar Sesión">
+                    <i class="fa-solid fa-sign-out-alt fa-lg"></i>
+                </button>
                 <div id="page-actions-header" class="flex-shrink-0"></div>
             </div>
             <div id="module-loader" class="absolute top-0 left-0 right-0 bottom-0 bg-[rgba(var(--color-bg-primary-rgb),0.7)] z-40 flex items-center justify-center hidden">
